--- a/MyEventPlanner/app/src/main/res/values/strings.xml
+++ b/MyEventPlanner/app/src/main/res/values/strings.xml
@@ -1,21 +1,21 @@
 <resources>
     <!-- General -->
-    <string name="app_name">MyEventPlanner</string>
+    <string name="app_name">My Event Planner</string>
 
     <!-- Navigation drawer -->
     <string name="nav_drawer_open">Open navigation drawer</string>
     <string name="nav_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">My Event Planner</string>
+    <string name="nav_header_subtitle">info.myeventplanner@gmail.com</string>
     <string name="nav_header_desc">Navigation header</string>
+    <string name="nav_drawer_main">Main screen</string>
+    <string name="nav_drawer_upcoming">Coming soon</string>
+    <string name="nav_drawer_holidays">Holidays</string>
 
     <!-- Navigation menu -->
     <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
 
     <!-- Other -->
     <string name="welcome_message">Welcome to MyEventPlanner!</string>
-    <string name="nav_drawer_buttons_import">Import</string>
-    <string name="nav_drawer_buttons_gallery">Gallery</string>
-    <string name="nav_drawer_buttons_slideshow">Slideshow</string>
-    <string name="nav_drawer_buttons_tools">Tools</string>
 </resources>
