--- a/MyEventPlanner/app/src/main/res/values/strings.xml
+++ b/MyEventPlanner/app/src/main/res/values/strings.xml
@@ -9,13 +9,15 @@
     <string name="nav_header_subtitle">info.myeventplanner@gmail.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="nav_drawer_main">Main screen</string>
-    <string name="nav_drawer_upcoming">Coming soon</string>
+    <string name="nav_drawer_upcoming">Upcoming</string>
     <string name="nav_drawer_holidays">Holidays</string>
+    <string name="nav_drawer_birthday">Birthdays</string>
+    <string name="nav_drawer_other">Other</string>
 
     <!-- Navigation menu -->
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
 
     <!-- Other -->
-    <string name="welcome_message">Welcome to MyEventPlanner!</string>
+    <string name="image_default_desc">Image</string>
 </resources>
