--- a/MyEventPlanner/app/src/main/res/values/strings.xml
+++ b/MyEventPlanner/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
 
     <!-- Other -->
     <string name="image_default_desc">Image</string>
+    <string name="event_list_item_date">Date:</string>
 </resources>
