Added implementation of birthdays, other and upcoming events
- added implementation of birthdays, other and upcoming events (both business logic and design)
- added small changes in code where necessary

--- a/MyEventPlanner/app/src/main/res/values/strings.xml
+++ b/MyEventPlanner/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="upcoming_title">Upcoming events</string>
     <string name="holiday_details_title">Time until holiday</string>
     <string name="add_holiday_title">Add new holiday</string>
+    <string name="birthday_details_title">Time until birthday</string>
+    <string name="other_event_details_title">Time until event</string>
 
     <!-- Event list item -->
     <string name="event_list_item_date">Date:</string>
