--- a/MyEventPlanner/app/src/main/res/values/strings.xml
+++ b/MyEventPlanner/app/src/main/res/values/strings.xml
@@ -91,7 +91,7 @@
     <string name="login_type_username">Username</string>
     <string name="login_type_password">Password</string>
     <string name="login_button">Login</string>
-    <string name="login_powered_by">Powered by 000webhost.com © 2018</string>
+    <string name="login_powered_by">Powered by the 000webhost.com © 2018</string>
     <string name="login_success">Successful login!</string>
     <string name="login_error">Wrong username or password!</string>
 
